--- a/public/create/stylesets/Typographic Design Templates/TOC.html
+++ b/public/create/stylesets/Typographic Design Templates/TOC.html
@@ -5,37 +5,37 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title></title>
-  <link href="draft-color.css" rel="stylesheet" type="text/css" />
+  <link href="extravaganza-color.css" rel="stylesheet" type="text/css" />
   <link href="non-editable.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
   <h2>Contents</h2>
 
-  <p class="toc"><a href="../Text/Chapter.html">Preface</a><br /></p>
+  <p class="toc-item"><a href="../Text/Chapter.html">Preface</a><br /></p>
 
-  <p class="toc"><a href="../Text/Chapter.html">The Daily Miracle</a><br /></p>
+  <p class="toc-item"><a href="../Text/Chapter.html">The Daily Miracle</a><br /></p>
 
-  <p class="toc"><a href="../Text/Chapter.html">The Desire to Exceed one's Programme</a><br /></p>
+  <p class="toc-item"><a href="../Text/Chapter.html">The Desire to Exceed one's Programme</a><br /></p>
 
-  <p class="toc"><a href="../Text/Chapter.html">Precautions Before Beginning</a><br /></p>
+  <p class="toc-item"><a href="../Text/Chapter.html">Precautions Before Beginning</a><br /></p>
 
-  <p class="toc"><a href="../Text/Chapter.html">The Cause of the Trouble</a><br /></p>
+  <p class="toc-item"><a href="../Text/Chapter.html">The Cause of the Trouble</a><br /></p>
 
-  <p class="toc"><a href="../Text/Chapter.html">Tennis and the Immortal Soul</a><br /></p>
+  <p class="toc-item"><a href="../Text/Chapter.html">Tennis and the Immortal Soul</a><br /></p>
 
-  <p class="toc"><a href="../Text/Chapter.html">Remember Human Nature</a><br /></p>
+  <p class="toc-item"><a href="../Text/Chapter.html">Remember Human Nature</a><br /></p>
 
-  <p class="toc"><a href="../Text/Chapter.html">Controlling the Mind</a><br /></p>
+  <p class="toc-item"><a href="../Text/Chapter.html">Controlling the Mind</a><br /></p>
 
-  <p class="toc"><a href="../Text/Chapter.html">The Reflective Mood</a><br /></p>
+  <p class="toc-item"><a href="../Text/Chapter.html">The Reflective Mood</a><br /></p>
 
-  <p class="toc"><a href="../Text/Chapter.html">Interest in the Arts</a><br /></p>
+  <p class="toc-item"><a href="../Text/Chapter.html">Interest in the Arts</a><br /></p>
 
-  <p class="toc"><a href="../Text/Chapter.html">Nothing in Life is Humdrum</a><br /></p>
+  <p class="toc-item"><a href="../Text/Chapter.html">Nothing in Life is Humdrum</a><br /></p>
 
-  <p class="toc"><a href="../Text/Chapter.html">Serious Reading</a><br /></p>
+  <p class="toc-item"><a href="../Text/Chapter.html">Serious Reading</a><br /></p>
 
-  <p class="toc"><a href="../Text/Chapter.html">Dangers to Avoid</a><br /></p>
+  <p class="toc-item"><a href="../Text/Chapter.html">Dangers to Avoid</a><br /></p>
 </body>
 </html>
