Fixes issue #124 - Allows changing the defaultStyleset of a document

--- a/public/create/index.html
+++ b/public/create/index.html
@@ -13,7 +13,7 @@
 	<script type="text/javascript" src="scripts/angular-file-upload.min.js"></script>
 	<script type="text/javascript" src="scripts/html5-sortable.js"></script>
 	<script type="text/javascript" src="scripts/ngProgress.min.js"></script>
-	<script type="text/javascript" src="scripts/styleset-utils-shared.js"></script>
+	<script type="text/javascript" src="scripts/utils-shared.js"></script>
 	<script type="text/javascript" src="scripts/app_controller.js"></script>
 	<script type="text/javascript" src="scripts/projectSpace_controller.js"></script>
 	<script type="text/javascript" src="scripts/project_controller.js"></script>
