--- a/public/create/pages/project.html
+++ b/public/create/pages/project.html
@@ -88,7 +88,7 @@
 										<div class="arrow"></div>
 									</a>
 
-									<span ng-hide="editingStyleName" ng-click="applyStyle(styleset, style)">{{style.name}}</span>
+									<span ng-style="style.css" ng-hide="editingStyleName" ng-click="applyStyle(styleset, style)">{{style.name}}</span>
 
 									<form ng-show="editingStyleName">
 										<textarea id="renameStyle" rows="1" ng-model="style.name" focus-on="!!editingStyleName" on-enter="editingStyleName = false; renameStyle(style);"></textarea>
