removed bw css link, apply default styleset after style has been applied

--- a/public/create/pages/project.html
+++ b/public/create/pages/project.html
@@ -83,7 +83,7 @@
 							</div>
 
 							<ul ng-hide="visible" class="typo-children">
-								<li ng-repeat="style in styleset.styles" ng-click="x=!x" ng-hide="style.archived" ng-selected="selectedStyle.name === style.name && selectedStyle._id === style._id">
+								<li ng-repeat="style in styleset.styles" ng-click="x=!x" ng-hide="style.archived" ng-selected="selectedStyle._id === style._id">
 									<a class="style-options-show" ng-click="showStyleOptions = true">
 										<div class="arrow"></div>
 									</a>
