--- a/public/create/pages/project.html
+++ b/public/create/pages/project.html
@@ -90,7 +90,17 @@
 
 									<span class="style-isblock" ng-bind="isBlock(style)"></span>
 
-									<span ng-style="style.css" ng-hide="editingStyleName" ng-click="applyStyle(styleset, style)">{{style.name}}</span>
+									<div class="style-height">
+										<span ng-style="style.css" ng-hide="editingStyleName" ng-click="applyStyle(styleset, style)">{{style.name}}</span>
+									</div>
+
+									<div class="style-copy-options" ng-show="copyCSS && selectedStyle._id === style._id">
+										<ul>
+											<li><a ng-click="saveAsCharStyle(style)">save as character style</a></li>
+											<li><a>save as block style</a></li>
+											<li><a>override style</a></li>
+										</ul>
+									</div>
 
 									<form ng-show="editingStyleName">
 										<textarea id="renameStyle" rows="1" ng-model="style.name" focus-on="!!editingStyleName" on-enter="editingStyleName = false; renameStyle(style);"></textarea>
