--- a/public/create/pages/project.html
+++ b/public/create/pages/project.html
@@ -96,7 +96,7 @@
 
 									<div class="style-copy-options" ng-show="copyCSS && selectedStyle._id === style._id">
 										<ul>
-											<li><a ng-click="saveAsCharStyle(style)">save as character style</a></li>
+											<li><a ng-click="saveAsCharStyle(styleset)">save as character style</a></li>
 											<li><a>save as block style</a></li>
 											<li><a>override style</a></li>
 										</ul>
