--- a/public/create/pages/project.html
+++ b/public/create/pages/project.html
@@ -97,13 +97,13 @@
 									<div class="style-copy-options" ng-show="copyCSS && selectedStyle._id === style._id">
 										<ul>
 											<li><a ng-click="saveAsCharStyle(styleset)">save as character style</a></li>
-											<li><a>save as block style</a></li>
-											<li><a>override style</a></li>
+											<li><a ng-click="saveAsBlockStyle(styleset)">save as block style</a></li>
+											<li><a ng-click="overrideStyle(style)">override style</a></li>
 										</ul>
 									</div>
 
 									<form ng-show="editingStyleName">
-										<textarea id="renameStyle" rows="1" ng-model="style.name" focus-on="!!editingStyleName" on-enter="editingStyleName = false; renameStyle(style);"></textarea>
+										<textarea id="renameStyle" rows="1" ng-model="style.name" focus-on="!!editingStyleName" on-enter="editingStyleName = false; updateStyle(style);"></textarea>
 									</form>
 
 									<div class="style-options" ng-show="showStyleOptions">
