override and block fixes

--- a/public/create/pages/project.html
+++ b/public/create/pages/project.html
@@ -97,7 +97,7 @@
 									<div class="style-copy-options" ng-show="copyCSS && selectedStyle._id === style._id">
 										<ul>
 											<li><a ng-click="saveAsCharStyle(styleset)">save as character style</a></li>
-											<li><a ng-click="saveAsBlockStyle(styleset)">save as block style</a></li>
+											<li><a ng-click="saveAsBlockStyle(styleset, style)">save as block style</a></li>
 											<li><a ng-click="overrideStyle(style)">override style</a></li>
 										</ul>
 									</div>
