new profile picture

--- a/public/create/pages/project-space.html
+++ b/public/create/pages/project-space.html
@@ -15,7 +15,7 @@
 				</div>
 				<div class="uni-bottom-box" ng-show="user._id">
 					<div class="user-box">
-						<img class="user-image" src="http://placekitten.com/50/50">
+						<img class="user-image" src="pages/images/profilepicture.png" height="50" width="50">
 						<div class="user-text">
 							<div class="user-name" ng-bind-html="user.firstname + ' ' + user.lastname"></div>
 							<div class="user-links">
@@ -29,7 +29,7 @@
 			</div>
 			<div class="user-settings" ng-show="showSettings">
 				<div class="user-box">
-						<img class="user-image" src="http://placekitten.com/100/100">
+						<img class="user-image" src="pages/images/profilepicture.png" height="100" width="100">
 						<div class="settings-text">
 							<div class="user-name settings" ng-bind-html="user.firstname"></div>
 							<div class="user-name settings" ng-bind-html="user.lastname"></div>
