--- a/public/create/pages/project.html
+++ b/public/create/pages/project.html
@@ -66,7 +66,7 @@
 								<div class="arrow"></div>
 							</a>
 
-							<p ng-click="visible=!visible" ng-hide="editingStylesetName">{{styleset.name}}</p>
+							<p ng-style="styleset.css" ng-click="visible=!visible" ng-hide="editingStylesetName">{{styleset.name}}</p>
 
 							<form ng-show="editingStylesetName">
 								<p>
@@ -88,6 +88,7 @@
 										<div class="arrow"></div>
 									</a>
 
+									{{style.tag === 'h1' && setStylesetStyling(styleset, style) || ''}}
 									<span class="style-isblock" ng-bind="isBlock(style)"></span>
 
 									<div class="style-height">
