--- a/public/create/pages/project.html
+++ b/public/create/pages/project.html
@@ -61,7 +61,7 @@
 						<p>+</p>
 					</div>
 					<ul>
-						<li ng-repeat="styleset in stylesets" class="typo" ng-class="{ 'open' : visible == true }" ng-hide="styleset.archived">
+						<li ng-repeat="styleset in stylesets" class="typo" ng-class="{ 'open' : visible == true }" ng-hide="styleset.archived || styleset.hidden">
 							<a class="styleset-options-show" ng-click="showStylesetOptions = true">
 								<div class="arrow"></div>
 							</a>
@@ -83,7 +83,7 @@
 							</div>
 
 							<ul ng-hide="visible" class="typo-children">
-								<li ng-repeat="style in styleset.styles" id="{{style._id}}" ng-hide="style.archived" ng-selected="selectedStyle._id === style._id">
+								<li ng-repeat="style in styleset.styles" id="{{style._id}}" ng-hide="style.archived || style.hidden" ng-selected="selectedStyle._id === style._id">
 									<a class="style-options-show" ng-click="showStyleOptions = true">
 										<div class="arrow"></div>
 									</a>
