#220 click whole book/document

--- a/public/create/pages/project-space.html
+++ b/public/create/pages/project-space.html
@@ -74,7 +74,7 @@
 				</a>
 				<!--<p ng-hide="editingPublicationTitle" ng-click="editingPublicationTitle = true;">-->
 				<p ng-hide="editingPublicationTitle">
-					<a href="#/project?pid={{publication._id}}">{{publication.name}}</a>
+					<a href="#/project?pid={{publication._id}}" class="publication-link">{{publication.name}}</a>
 				</p>
 
 				<form ng-show="editingPublicationTitle">
