--- a/public/create/pages/project.html
+++ b/public/create/pages/project.html
@@ -37,7 +37,7 @@
 							</a>
 
 							<p ng-hide="editingProjectDocumentTitle">
-								<a ng-click="projectDocumentChosen(projectDocument)">{{projectDocument.name}}</a>
+								<a class="projectDocument-link" ng-click="projectDocumentChosen(projectDocument)">{{projectDocument.name}}</a>
 							</p>
 
 							<form ng-show="editingProjectDocumentTitle">
