--- a/public/create/stylesets/TOC.html
+++ b/public/create/stylesets/TOC.html
@@ -5,7 +5,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title></title>
-  <link href="simple-color.css" rel="stylesheet" type="text/css" />
+  <link href="blank.css" rel="stylesheet" type="text/css" />
   <link href="non-editable.css" rel="stylesheet" type="text/css" />
 </head>
 
