--- a/public/create/pages/project.html
+++ b/public/create/pages/project.html
@@ -66,7 +66,7 @@
 								<div class="arrow"></div>
 							</a>
 
-							<p ng-style="styleset.css" ng-click="typoChildrenVisible=!typoChildrenVisible" ng-hide="styleset.rename">{{styleset.name}}</p>
+							<p class="not-selectable" ng-style="styleset.css" ng-click="typoChildrenVisible=!typoChildrenVisible" ng-hide="styleset.rename">{{styleset.name}}</p>
 
 							<form ng-show="styleset.rename">
 								<p>
@@ -92,7 +92,7 @@
 									<span class="style-isblock" ng-bind="isBlock(style)"></span>
 
 									<div class="style-height" ng-hide="style.rename">
-										<span ng-style="style.css" ng-click="applyStyle(styleset, style)">{{style.name}}</span>
+										<span class="not-selectable" ng-style="style.css" ng-click="applyStyle(styleset, style)">{{style.name}}</span>
 									</div>
 
 									<div class="style-copy-options" ng-show="copyCSS && selectedStyle._id === style._id">
