--- a/public/create/pages/project.html
+++ b/public/create/pages/project.html
@@ -274,6 +274,7 @@
 						<!--<li class="insertOption"><img src="pages/images/insert_cover_button.png" width="80" height="80"></li>-->
 						<li class="insertOptionProperties" ng-class="{ 'expanded' : activeInsertOption === 'showInsertAnchorOptions' }">
 							<div class="left-menu-options">
+								<a ng-click="generateToc()">Generate TOC</a>
 								<span class="left-menu-box inputfield">
 									<input type="text" placeholder="Anchor name">
 								</span>
