--- a/public/create/stylesets/TOC.html
+++ b/public/create/stylesets/TOC.html
@@ -12,30 +12,40 @@
 <body>
   <h2>Contents</h2>
 
-  <p class="toc-item"><a href="../Text/Chapter.html">Preface</a><br /></p>
+  <p class="toc-item-h1"><a href="../Text/Chapter.html">Preface</a><br /></p>
 
-  <p class="toc-item"><a href="../Text/Chapter.html">The Daily Miracle</a><br /></p>
+  <p class="toc-item-h1"><a href="../Text/Chapter.html">The Daily Miracle</a><br /></p>
 
-  <p class="toc-item"><a href="../Text/Chapter.html">The Desire to Exceed one's Programme</a><br /></p>
+  <p class="toc-item-h2"><a href="../Text/Chapter.html">The Desire to Exceed one's Programme</a><br /></p>
 
-  <p class="toc-item"><a href="../Text/Chapter.html">Precautions Before Beginning</a><br /></p>
+  <p class="toc-item-h3"><a href="../Text/Chapter.html">Precautions Before Beginning</a><br /></p>
 
-  <p class="toc-item"><a href="../Text/Chapter.html">The Cause of the Trouble</a><br /></p>
+  <p class="toc-item-h4"><a href="../Text/Chapter.html">The Cause of the Trouble</a><br /></p>
 
-  <p class="toc-item"><a href="../Text/Chapter.html">Tennis and the Immortal Soul</a><br /></p>
+  <p class="toc-item-h5"><a href="../Text/Chapter.html">Tennis and the Immortal Soul</a><br /></p>
 
-  <p class="toc-item"><a href="../Text/Chapter.html">Remember Human Nature</a><br /></p>
+  <p class="toc-item-h6"><a href="../Text/Chapter.html">Remember Human Nature</a><br /></p>
 
-  <p class="toc-item"><a href="../Text/Chapter.html">Controlling the Mind</a><br /></p>
+  <p class="toc-item-h1"><a href="../Text/Chapter.html">Controlling the Mind</a><br /></p>
 
-  <p class="toc-item"><a href="../Text/Chapter.html">The Reflective Mood</a><br /></p>
+  <p class="toc-item-h2"><a href="../Text/Chapter.html">Hurry up</a><br /></p>
 
-  <p class="toc-item"><a href="../Text/Chapter.html">Interest in the Arts</a><br /></p>
+  <p class="toc-item-h1"><a href="../Text/Chapter.html">The Reflective Mood</a><br /></p>
 
-  <p class="toc-item"><a href="../Text/Chapter.html">Nothing in Life is Humdrum</a><br /></p>
+  <p class="toc-item-h3"><a href="../Text/Chapter.html">The Cause of the Trouble</a><br /></p>
 
-  <p class="toc-item"><a href="../Text/Chapter.html">Serious Reading</a><br /></p>
+  <p class="toc-item-h1"><a href="../Text/Chapter.html">Interest in the Arts</a><br /></p>
 
-  <p class="toc-item"><a href="../Text/Chapter.html">Dangers to Avoid</a><br /></p>
+  <p class="toc-item-h4"><a href="../Text/Chapter.html">The Daily Miracle</a><br /></p>
+
+  <p class="toc-item-h1"><a href="../Text/Chapter.html">Nothing in Life is Humdrum</a><br /></p>
+
+  <p class="toc-item-h5"><a href="../Text/Chapter.html">Tennis and the Immortal Soul</a><br /></p>
+
+  <p class="toc-item-h1"><a href="../Text/Chapter.html">Serious Reading</a><br /></p>
+
+  <p class="toc-item-h6"><a href="../Text/Chapter.html">Remember Human Nature</a><br /></p>
+
+  <p class="toc-item-h1"><a href="../Text/Chapter.html">Dangers to Avoid</a><br /></p>
 </body>
 </html>
