--- a/public/create/pages/project.html
+++ b/public/create/pages/project.html
@@ -159,6 +159,11 @@
 								<span class="left-menu-box inputfield full-size left-menu-parameter-margin">
 									<input type="text" ng-model="linkText" placeholder="Text">
 								</span>
+								<span class="left-menu-box inputfield full-size left-menu-parameter-margin">
+									<select ng-model="linkAnchor" ng-options="anchor.text for anchor in toc">
+										<option value="">Select to link an anchor</option>
+									</select>
+								</span>
 								<span class="left-menu-button full-size left-menu-parameter-margin">
 									<a ng-click="insertNewLink();">+</a>
 								</span>
