changed the UI for the output box

--- a/public/create/pages/project.html
+++ b/public/create/pages/project.html
@@ -436,7 +436,32 @@
 			</div>
 			<div class="menu-item-right output" ng-show="showOutput">
 				<div class="menu-content">
-					Output
+					<ul>
+					<li class="outputOptionProperties">
+						<span class="left-menu-box label">Title</span>
+						<span class="left-menu-box inputfield full-size">
+							<input type="text" name="output_title" id="output_title" />
+						</span>
+						<span class="left-menu-box label left-menu-parameter-margin">Author</span>
+						<span class="left-menu-box inputfield full-size">
+							<input type="text" name="output_author" id="output_author">
+						</span>
+						<span class="left-menu-box label left-menu-parameter-margin">Language</span>
+						<span class="left-menu-box inputfield full-size">
+							<input type="text" name="output_language" id="output_language">
+						</span>
+						<span class="left-menu-box label left-menu-parameter-margin">Description</span>
+						<span class="left-menu-box inputfield full-size">
+							<textarea name="output_description" id="output_description"></textarea>
+						</span>
+						<span class="left-menu-box label left-menu-parameter-margin">Unique identifier / ISBN</span>
+						<span class="left-menu-box inputfield full-size">
+							<input type="text" name="output_unique" id="output_unique">
+						</span>
+						<span class="left-menu-box label left-menu-parameter-margin">Download options</span>
+						<span>Epub, PDF, Mobi</span>
+					</li>
+					</ul>
 				</div>
 			</div>
 		</div>
