added finalize tab svg

--- a/public/create/pages/project.html
+++ b/public/create/pages/project.html
@@ -339,9 +339,9 @@
 	<div id="menu-right-tabs" class="menu-right-tabs" ondragstart="return false;" ondrop="return false;">
 		<div class="menu-right-tab" ng-class="{ 'selectedTab' : showInsertOptions }" ng-click="showInsertOptions = !showInsertOptions; showOutput = false;">
 			<div class="center"></div>
-			<img src="pages/images/insert180.svg" width="20">
+			<img src="pages/images/finalize.svg" width="20">
 		</div>
-		<div class="menu-right-tab" ng-class="{ 'selectedTab' : showOutput }" ng-click="showOutput = !showOutput; showInsertOptions = false;">
+		<div class="menu-right-tab output" ng-class="{ 'selectedTab' : showOutput }" ng-click="showOutput = !showOutput; showInsertOptions = false;">
 			<div class="center"></div>
 			<img src="pages/images/output.svg" width="20">
 		</div>
