renaming to chosen

--- a/public/create/pages/project.html
+++ b/public/create/pages/project.html
@@ -124,17 +124,17 @@
 				<div class="menu-content">
 					<ul>
 						<!--<li class="insertOption" ng-class="{ 'expanded' : activeInsertOption === 'showInsertBoxOptions' }">
-							<a ng-click="insertOptionChoosen('showInsertBoxOptions');">
+							<a ng-click="insertOptionChosen('showInsertBoxOptions');">
 								<img src="pages/images/insert_box_button.png" width="80" height="80" />
 							</a>
 						</li>-->
 						<li class="insertOption" ng-class="{ 'expanded' : activeInsertOption === 'showInsertHyperlinkOptions' }">
-							<a ng-click="insertOptionChoosen('showInsertHyperlinkOptions');">
+							<a ng-click="insertOptionChosen('showInsertHyperlinkOptions');">
 								<img src="pages/images/insert_hyperlink_button.png" width="80" height="80" />
 							</a>
 						</li>
 						<li class="insertOption" ng-class="{ 'expanded' : activeInsertOption === 'showInsertImageOptions' }">
-							<a ng-click="insertOptionChoosen('showInsertImageOptions');">
+							<a ng-click="insertOptionChosen('showInsertImageOptions');">
 								<img src="pages/images/insert_image_button.png" width="80" height="80" />
 							</a>
 						</li>
@@ -146,7 +146,7 @@
 							margin settings
 							<div class="left-menu-divider"></div>
 							<div class="left-menu-icons">
-								<span class="left-menu-button left-menu-close-item" ng-click="insertOptionChoosen('showInsertBoxOptions');">
+								<span class="left-menu-button left-menu-close-item" ng-click="insertOptionChosen('showInsertBoxOptions');">
 									X
 								</span>
 							</div>
@@ -171,7 +171,7 @@
 
 							<div class="left-menu-divider"></div>
 							<div class="left-menu-icons">
-								<span class="left-menu-button left-menu-close-item" ng-click="insertOptionChoosen('showInsertHyperlinkOptions');">
+								<span class="left-menu-button left-menu-close-item" ng-click="insertOptionChosen('showInsertHyperlinkOptions');">
 									X
 								</span>
 							</div>
@@ -237,19 +237,19 @@
 							</div>-->
 							<div class="left-menu-divider"></div>
 							<div class="left-menu-icons">
-								<span class="left-menu-button left-menu-close-item" ng-click="insertOptionChoosen('showInsertImageOptions');">
+								<span class="left-menu-button left-menu-close-item" ng-click="insertOptionChosen('showInsertImageOptions');">
 									X
 								</span>
 							</div>
 						</li>
 
 						<li class="insertOption" ng-class="{ 'expanded' : activeInsertOption === 'showInsertPagebreakOptions' }">
-							<a ng-click="insertOptionChoosen('showInsertPagebreakOptions');">
+							<a ng-click="insertOptionChosen('showInsertPagebreakOptions');">
 								<img src="pages/images/insert_pagebreak_button.png" width="80" height="80" />
 							</a>
 						</li>
 						<li class="insertOption" ng-class="{ 'expanded' : activeInsertOption === 'showInsertAnchorOptions' }">
-							<a ng-click="insertOptionChoosen('showInsertAnchorOptions');">
+							<a ng-click="insertOptionChosen('showInsertAnchorOptions');">
 								<img src="pages/images/insert_anchor_button.png" width="80" height="80" />
 							</a>
 						</li>
@@ -268,7 +268,7 @@
 							</div>
 							<div class="left-menu-divider"></div>
 							<div class="left-menu-icons">
-								<span class="left-menu-button left-menu-close-item" ng-click="insertOptionChoosen('showInsertPagebreakOptions');">
+								<span class="left-menu-button left-menu-close-item" ng-click="insertOptionChosen('showInsertPagebreakOptions');">
 									X
 								</span>
 							</div>
@@ -289,7 +289,7 @@
 							</div>
 							<div class="left-menu-divider"></div>
 							<div class="left-menu-icons">
-								<span class="left-menu-button left-menu-close-item" ng-click="insertOptionChoosen('showInsertAnchorOptions');">
+								<span class="left-menu-button left-menu-close-item" ng-click="insertOptionChosen('showInsertAnchorOptions');">
 									X
 								</span>
 							</div>
@@ -367,12 +367,12 @@
 				<div class="menu-content">
 					<ul>
 						<li class="insertOption" ng-class="{ 'expanded' : activeFinalizeOption === 'showFinalizeColophonOptions' }">
-							<a ng-click="finalizeOptionChoosen('showFinalizeColophonOptions');">
+							<a ng-click="finalizeOptionChosen('showFinalizeColophonOptions');">
 								colophon
 							</a>
 						</li>
 						<li class="insertOption" ng-class="{ 'expanded' : activeFinalizeOption === 'showFinalizeCoverOptions' }">
-							<a ng-click="finalizeOptionChoosen('showFinalizeCoverOptions');">
+							<a ng-click="finalizeOptionChosen('showFinalizeCoverOptions');">
 								<img src="pages/images/insert_cover_button.png" width="80" height="80" />
 							</a>
 						</li>
@@ -382,7 +382,7 @@
 							</div>
 							<div class="right-menu-divider"></div>
 							<div class="right-menu-icons">
-								<span class="right-menu-button right-menu-close-item" ng-click="finalizeOptionChoosen('showFinalizeColophonOptions');">
+								<span class="right-menu-button right-menu-close-item" ng-click="finalizeOptionChosen('showFinalizeColophonOptions');">
 									X
 								</span>
 							</div>
@@ -396,19 +396,19 @@
 							</div>
 							<div class="right-menu-divider"></div>
 							<div class="right-menu-icons">
-								<span class="right-menu-button right-menu-close-item" ng-click="finalizeOptionChoosen('showFinalizeCoverOptions');">
+								<span class="right-menu-button right-menu-close-item" ng-click="finalizeOptionChosen('showFinalizeCoverOptions');">
 									X
 								</span>
 							</div>
 						</li>
 
 						<li class="insertOption" ng-class="{ 'expanded' : activeFinalizeOption === 'showFinalizeTocOptions' }">
-							<a ng-click="finalizeOptionChoosen('showFinalizeTocOptions');">
+							<a ng-click="finalizeOptionChosen('showFinalizeTocOptions');">
 								toc
 							</a>
 						</li>
 						<li class="insertOption" ng-class="{ 'expanded' : activeFinalizeOption === 'showFinalizeTitlepageOptions' }">
-							<a ng-click="finalizeOptionChoosen('showFinalizeTitlepageOptions');">
+							<a ng-click="finalizeOptionChosen('showFinalizeTitlepageOptions');">
 								title page
 							</a>
 						</li>
@@ -420,7 +420,7 @@
 							</div>
 							<div class="right-menu-divider"></div>
 							<div class="right-menu-icons">
-								<span class="right-menu-button right-menu-close-item" ng-click="finalizeOptionChoosen('showFinalizeTocOptions');">
+								<span class="right-menu-button right-menu-close-item" ng-click="finalizeOptionChosen('showFinalizeTocOptions');">
 									X
 								</span>
 							</div>
@@ -431,7 +431,7 @@
 							</div>
 							<div class="right-menu-divider"></div>
 							<div class="right-menu-icons">
-								<span class="right-menu-button right-menu-close-item" ng-click="finalizeOptionChoosen('showFinalizeTitlepageOptions');">
+								<span class="right-menu-button right-menu-close-item" ng-click="finalizeOptionChosen('showFinalizeTitlepageOptions');">
 									X
 								</span>
 							</div>
