styling + set toc after generating toc

--- a/public/create/pages/project.html
+++ b/public/create/pages/project.html
@@ -419,6 +419,9 @@
 								<span class="right-menu-button full-size right-menu-parameter-margin">
 									<a ng-click="generateToc();">Generate TOC</a>
 								</span>
+								<span class="right-menu-box right-menu-parameter-margin">
+									<span class="option" ng-repeat="tocs in toc"><a ng-click="anchorScrollTo(tocs);">{{tocs.text}}</a></span>
+								</span>
 							</div>
 							<div class="right-menu-divider"></div>
 							<div class="right-menu-icons">
