fix naming, paths, centering

--- a/public/create/stylesets/Titlepage.html
+++ b/public/create/stylesets/Titlepage.html
@@ -5,7 +5,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title></title>
-  <link href="meta.css" rel="stylesheet" type="text/css" />
+  <link href="meta-bw.css" rel="stylesheet" type="text/css" />
   <link href="non-editable.css" rel="stylesheet" type="text/css" />
 </head>
 
@@ -22,10 +22,7 @@
 
   <p class="empty-paragraph">&nbsp;<br /></p>
 
-  <p class="empty-paragraph">&nbsp;<br /></p>
+  <a href="http://www.scripler.com"><img class="logo" src="Images/builtwithscripler.svg" /></a>
 
-  <div class="logo">
-    <a href="http://www.scripler.com"><img alt="" class="image" src="../Images/builtwithscripler.svg" /></a>
-  </div>
 </body>
 </html>
