generate title page

--- a/public/create/pages/project.html
+++ b/public/create/pages/project.html
@@ -432,7 +432,9 @@
 						</li>
 						<li class="insertOptionProperties" ng-class="{ 'expanded' : activeFinalizeOption === 'showFinalizeTitlepageOptions' }">
 							<div class="right-menu-options">
-								&nbsp;
+								<span class="right-menu-button full-size right-menu-parameter-margin">
+									<a ng-click="generateTitlePage();">Generate Title Page</a>
+								</span>
 							</div>
 							<div class="right-menu-divider"></div>
 							<div class="right-menu-icons">
