--- a/public/create/pages/project.html
+++ b/public/create/pages/project.html
@@ -38,7 +38,7 @@
 
 							<p ng-hide="editingProjectDocumentTitle">
 								<a class="projectDocument-link" ng-click="projectDocumentChosen(projectDocument)">
-									{{projectDocument.type && projectDocument.type || projectDocument.name}}
+									{{projectDocument.type || projectDocument.name}}
 								</a>
 							</p>
 
