--- a/public/create/pages/project.html
+++ b/public/create/pages/project.html
@@ -379,9 +379,9 @@
 							</a>
 						</li>
 						<li class="insertOptionProperties" ng-class="{ 'expanded' : activeFinalizeOption === 'showFinalizeColophonOptions' }">
-							<div class="right-menu-options">
-								&nbsp;
-							</div>
+							<span class="right-menu-button full-size right-menu-parameter-margin">
+									<a ng-click="generateColophon();">Generate Colophon</a>
+							</span>
 							<div class="right-menu-divider"></div>
 							<div class="right-menu-icons">
 								<span class="right-menu-button right-menu-close-item" ng-click="finalizeOptionChosen('showFinalizeColophonOptions');">
