--- a/public/create/pages/project.html
+++ b/public/create/pages/project.html
@@ -102,7 +102,7 @@
 										<ul>
 											<li><a ng-click="saveAsCharStyle(styleset, style)">save as character style</a></li>
 											<li><a ng-click="saveAsBlockStyle(styleset, style)">save as block style</a></li>
-											<li><a ng-click="overrideStyle(style)">override style</a></li>
+											<li><a ng-click="overwriteStyle(style)">overwrite style</a></li>
 										</ul>
 									</div>
 
